--- a/responsive.css
+++ b/responsive.css
@@ -16,6 +16,12 @@
         flex-direction: column;
         gap:1rem;
     }
+    .check-in-DateTime{
+        gap: 1rem;
+    }
+    .check-out-DateTime{
+        gap: 1rem;
+    }
     .btn{
         margin-left: 28%;
     }
